Created functionality for opening highlighted urls

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -8,15 +8,12 @@
     </style>
   </head>
   <body>
-    <div id="notes-container">
-      <h6>Notes on the Page</h6>
-      <ul id="notes"></ul>
-    </div>
     <div class="container">
-      <textarea class="form-control" id="note-value"></textarea>
-      </br>
-      <button class="btn btn-dark" id="save-note">Save Note</button>
-      <button class="btn btn-danger" id="delete-notes">Clear Notes</button>
+      <button class="btn btn-dark" id="open-highlighted">Open Highlighted Links</button>
+      <br/><br/>
+      <textarea class="form-control" id="url-value"></textarea>
+      <button class="btn btn-dark" id="open-specified">Open Specified Links</button>
+      
       <script src="popup.js"></script>
     </div>
   </body>
