Added ability choose only specified links. Updated styling

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -8,12 +8,13 @@
     </style>
   </head>
   <body>
+    <h5><img src="../you-are-elevated-128p.png" alt="logo" width="64" height="64">You Are Elevated!</h5>
     <div class="container">
-      <button class="btn btn-dark" id="open-highlighted">Open Highlighted Links</button>
+      <button class="btn btn-dark" id="open-highlighted">Open highlighted links</button>
       <br/><br/>
-      <textarea class="form-control" id="url-value"></textarea>
-      <button class="btn btn-dark" id="open-specified">Open Specified Links</button>
-      
+      <button class="btn btn-dark" id="open-specified">Open links that include (highlighted)</button>
+      <textarea class="form-control" id="url-value" placeholder="reddit.com&#10;/profile"></textarea>
+      <br/><br/>
       <script src="popup.js"></script>
     </div>
   </body>
