Added ability to open links from whole page

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -13,8 +13,10 @@
       <button class="btn btn-dark" id="open-highlighted">Open highlighted links</button>
       <br/><br/>
       <button class="btn btn-dark" id="open-specified">Open links that include (highlighted)</button>
-      <textarea class="form-control" id="url-value" placeholder="reddit.com&#10;/profile"></textarea>
+      <textarea class="form-control" id="url-value" placeholder="reddit.com&#10;/profile/"></textarea>
       <br/><br/>
+      <button class="btn btn-dark" id="open-specified-all">Open links that include (whole page):</button>
+      <textarea class="form-control" id="url-value2" placeholder="youtube.com&#10;.pdf"></textarea>
       <script src="popup.js"></script>
     </div>
   </body>
